# yaws

./: .gitignore  CHANGELOG.md  yaws.cabal
app/: Main.hs
src/: Algorithm.hs  Network.hs  Reddit.hs  Setter.hs  Settings.hs  Types.hs  Unsplash.hs  Wallhaven.hs
