cabal-version:      2.4
name:               yaws
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Kamatayon
maintainer:         wowegable@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-all
    build-depends:  base ^>=4.14.3.0, http-client ^>=0.7.11, aeson^>=2.0.3.0, http-conduit^>=2.3.8, text^>=1.2.4.1, lens^>=5.1, 
                    bytestring^>=0.10.12, directory ^>=1.3.7.0, optparse-applicative ^>=0.17.0.0, utf8-string ^>=1.0.2, filepath^>=1.4.2.1, random^>=1.2.1.1,
                    process^>=1.6.14.0, transformers ^>=0.5.6.2, regex-tdfa ^>=1.3.1.2
    default-language: Haskell2010
    -- default-extensions: OverloadedStrings, TemplateHaskell   

executable yaws
    import: common-all
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules: Wallhaven

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- build-depends:    base ^>=4.14.3.0, http-client ^>=0.7.11, aeson^>=2.0.3.0, http-conduit^>=2.3.8, text^>=1.2.4.1
    hs-source-dirs:   app
    build-depends:  yawsLib
    -- default-language: Haskell2010

library yawsLib
    import: common-all
    hs-source-dirs: src
    exposed-modules: Wallhaven, Settings, Algorithm, Types, Setter, Reddit